--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.3.5",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@types/d3": "^7.4.0",
+    "d3": "^7.6.1",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
