--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "d3": "^7.6.1",
     "framer-motion": "^7.6.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-github-login": "^1.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.22",
