--- a/be/server/.chalice/config.json
+++ b/be/server/.chalice/config.json
@@ -1,6 +1,10 @@
 {
   "version": "2.0",
   "app_name": "server",
+  "environment_variables": {
+    "GH_CLIENT_ID": "9106310b56184deea4c5",
+    "GH_CLIENT_SECRET": "77faf7856f666521ce59fcda18160ba31a99364b"
+  },
   "stages": {
     "dev": {
       "api_gateway_stage": "api"
