--- a/be/server/.chalice/config.json
+++ b/be/server/.chalice/config.json
@@ -7,7 +7,11 @@
   },
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "environment_variables": {
+        "GH_CLIENT_ID": "0d7406453e9569a409f3",
+        "GH_CLIENT_SECRET": "566e39539e0fc739d169b53c3d5e63ccbe526f44"
+      }
     }
   }
 }
