Fix github authentication

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,9 @@
             "cwd": "${workspaceFolder}/be/server",
             "args": [
                 "local",
-                "--no-autoreload"
+                "--no-autoreload",
+                "--stage",
+                "local"
             ],
             "justMyCode": false
         },
