--- a/ui/.env
+++ b/ui/.env
@@ -1,2 +1,2 @@
-VITE_GH_CLIENT_ID=fdbe6b5a50988846f8a1
-VITE_GH_REDIRECT_URI=http://localhost:8000/github/callback
+VITE_GH_CLIENT_ID=9106310b56184deea4c5
+VITE_GH_REDIRECT_URI=http://127.0.0.1:8000/github/callback
