--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,21 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
-            "name": "chalice local",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "/Users/rantavory/dev/src/github.com/rantav/cse6242DVA-project/be/.venv/bin/chalice",
+            "program": "${file}",
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}/be/server",
-            "args": [
-                "local",
-                "--no-autoreload",
-                "--stage",
-                "local"
-            ],
-            "justMyCode": false
-        },
+            "justMyCode": true
+        }
     ]
 }
