--- a/ui/package.json
+++ b/ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.5",
     "d3": "^7.6.1",
     "framer-motion": "^7.6.4",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
