Read from a real database

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
         {
             "name": "app.py",
             "type": "python",
@@ -14,10 +21,11 @@
             "justMyCode": true,
             "env": {
                 "GITHUB_CLIENT_ID": "9106310b56184deea4c5",
-                "GITHUB_CLIENT_SECRET": "2aef37849a4c29edf4821a86c7595d2d8163e932"
-
+                "GITHUB_CLIENT_SECRET": "2aef37849a4c29edf4821a86c7595d2d8163e932",
+                "NEO4J_URI": "neo4j+s://e6d749c3.databases.neo4j.io",
+                "NEO4J_USERNAME": "neo4j",
+                "NEO4J_PASSWORD": "YXLt1G7jMHlS6uPH3e0RzB_S28rqiAyTfxl1ma4i9ns"
             }
-
         }
     ]
 }
