--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,9 +22,12 @@
             "env": {
                 "GITHUB_CLIENT_ID": "9106310b56184deea4c5",
                 "GITHUB_CLIENT_SECRET": "2aef37849a4c29edf4821a86c7595d2d8163e932",
-                "NEO4J_URI": "neo4j+s://e6d749c3.databases.neo4j.io",
+                // "NEO4J_URI": "neo4j+s://e6d749c3.databases.neo4j.io",
+                // "NEO4J_USERNAME": "neo4j",
+                // "NEO4J_PASSWORD": "YXLt1G7jMHlS6uPH3e0RzB_S28rqiAyTfxl1ma4i9ns"
+                "NEO4J_URI": "bolt://localhost:7687",
                 "NEO4J_USERNAME": "neo4j",
-                "NEO4J_PASSWORD": "YXLt1G7jMHlS6uPH3e0RzB_S28rqiAyTfxl1ma4i9ns"
+                "NEO4J_PASSWORD": "123456"
             }
         }
     ]
